fixed spacing

--- a/frontend/src/app/testResults/TestResultsList.scss
+++ b/frontend/src/app/testResults/TestResultsList.scss
@@ -20,6 +20,34 @@
   .sr-test-result-row--removed {
     text-decoration: line-through;
   }
+
+  .usa-form-group {
+    margin-top: 0;
+  }
+
+  .prime-search-container {
+    margin-bottom: 0;
+
+    .prime-search-input {
+      margin-bottom: 0;
+
+      .usa-input {
+        margin-top: 0.5rem;
+        margin-bottom: 0;
+        height: 2.5rem;
+      }
+
+      .usa-button {
+        margin-top: 0.5rem;
+        height: 2.5rem;
+      }
+    }
+  }
+
+  .results-dropdown {
+    position: relative;
+    top: 0;
+  }
 }
 
 .sr-showing-results-on-page {
