--- a/frontend/src/scss/PrimeStyles.scss
+++ b/frontend/src/scss/PrimeStyles.scss
@@ -397,11 +397,6 @@ $results-dropdown-spacing: #{units(4)} - #{units(2)} - 22px - #{units(4)}; // he
   }
 }
 
-#test-results-search-by-patient-input .results-dropdown {
-  top: 72px;
-  left: 30px;
-}
-
 // radio buttons
 
 .prime-radio {
